(maybe) fix: streching problem on safari

--- a/harmonix-client/src/pagelets-harmonix/5Members/Members.css
+++ b/harmonix-client/src/pagelets-harmonix/5Members/Members.css
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  align-items: flex-start;
   position: relative;
   transform: translateY(-100%);
 }
